# osquery-extensions

./: CMakeLists.txt  README.md
web_request/: CMakeLists.txt
web_request/src/: client.cpp  client.h  web_request.cpp  web_request.h
